--- a/WebApplicationCrud/Views/Administration/OrderHistory.cshtml
+++ b/WebApplicationCrud/Views/Administration/OrderHistory.cshtml
@@ -101,22 +101,22 @@
                                             @OrderDetail.Quantity
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.Country
+                                            @Order.user?.DeliveryInfo?.Country
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.City
+                                            @Order.user?.DeliveryInfo?.City
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.Street
+                                            @Order.user?.DeliveryInfo?.Street
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.Address
+                                            @Order.user?.DeliveryInfo?.Address
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.Address2
+                                            @Order.user?.DeliveryInfo?.Address2
                                         </td>
                                         <td>
-                                            @Order.user?.DeliveryInfo.AdditionalDescription
+                                            @Order.user?.DeliveryInfo?.AdditionalDescription
                                         </td>
                                         <td>
                                             @Order.OrderDate
