--- a/WebApplicationCrud/Views/Home/OrderPlacedSuccessfully.cshtml
+++ b/WebApplicationCrud/Views/Home/OrderPlacedSuccessfully.cshtml
@@ -1,6 +1,13 @@
 ﻿
-<div class="centered">
+<body style="min-height: 100vh; display: flex; flex-direction: column;">
+    <div class="centered">
 
-    <i class="fa fa-check" style="color:lawngreen; font-size:100px;border-radius:50%;border:lawngreen solid 1px" ></i>
-    <h3 style="color:lawngreen">Order Has Been Placed Successfully</h3>
-</div>
+        <i class="fa fa-check" style="color:lawngreen; font-size:100px;border-radius:50%;border:lawngreen solid 1px"></i>
+        <h3 style="color:lawngreen">Order Has Been Placed Successfully</h3>
+    </div>
+
+
+
+
+
+    </body>
