--- a/WebApplicationCrud/Views/Blog/Edit.cshtml
+++ b/WebApplicationCrud/Views/Blog/Edit.cshtml
@@ -3,48 +3,14 @@
 @{
 
 }
-<link href="~/lib/Trumbowyg-master/dist/ui/trumbowyg.min.css" rel="stylesheet" />
-<div id="preloder">
-    <div class="loader"></div>
-</div>
+<link href="~/css/Blog/trumbowyg.min.css" rel="stylesheet" />
+
 
 <div class="wrapper d-flex align-items-stretch">
     <partial name="_AdministrationSidebar">
 
         <div id="content" class="p-4 p-md-5 pt-5" style="width:100%">
-            @*<form asp-controller="Blog" asp-action="Edit" method="post" enctype="multipart/form-data">
-                    <input asp-for="Id" type="hidden" />
-                    <div>
-                        <label>Title</label>
-                        <input asp-for="Title" />
-                    </div>
-                    <div>
-                        <label>Description</label>
-                        <input asp-for="Description" />
-                    </div>
-                    <div>
-                        <label>Tags</label>
-                        <input asp-for="Tags" />
-                    </div>
-                    <div>
-                        <label>Category</label>
-                        <select asp-for="Category">
-                            <option value="Travel">Travel</option>
-                            <option value="Programing">Programing</option>
-                            <option value="Photography">Photography</option>
-                        </select>
-                    </div>
-                    <div>
-                        <label>Body</label>
-                        <textarea id="editor" asp-for="Body"></textarea>
-                    </div>
-                    <div>
-                        <label>Image</label>
-                        <input asp-for="CurrentImage" type="hidden" />
-                        <input asp-for="Image" />
-                    </div>
-                    <input type="submit" value="Submit" />
-                </form>*@
+          
 
             <!-- Page Preloder -->
             <!-- Blog Details Hero Begin -->
@@ -56,10 +22,10 @@
                                 <div class="blog__hero__text">
                                     <input asp-for="Id" type="hidden" />
                                     <label>Title</label>
-                                    <input asp-for="Title" />
+                                    <input class="form-control" asp-for="Title" />
                                     <ul>
                                         <li>By @Model.Author</li>
-                                        <li>February 21, 2019 @Model.CreationDate</li>
+                                        <li>@Model.CreationDate</li>
                                         <li>8 Comments</li>
                                     </ul>
                                 </div>
@@ -77,39 +43,31 @@
                                     <img src="~/img/blog/details/blog-details.jpg" alt="">
                                     <label>Image</label>
                                     <input asp-for="CurrentImage" type="hidden" />
-                                    <input asp-for="Image" />
+                                    <input class="form-control" asp-for="Image" />
                                 </div>
                             </div>
-                            <div class="col-lg-8">
+                            <div class="col-lg-12">
                                 <div class="blog__details__content">
-                                    <div class="blog__details__share">
-                                        <span>share</span>
-                                        <ul>
-                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="#" class="twitter"><i class="fa fa-twitter"></i></a></li>
-                                            <li><a href="#" class="youtube"><i class="fa fa-youtube-play"></i></a></li>
-                                            <li><a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
-                                    </div>
+                                   
                                     <div class="blog__details__quote">
                                         <i class="fa fa-quote-left"></i>
                                         <div>
                                             <label>Quote</label>
-                                            <input asp-for="Quote" />
+                                            <input class="form-control" asp-for="Quote" />
                                         </div>
                                         <div>
                                             <label>QuouteAuthor</label>
-                                            <input asp-for="QuoteAuthor" />
+                                            <input class="form-control" asp-for="QuoteAuthor" />
                                         </div>
                                     </div>
                                     <div class="blog__details__text">
                                         <label>Body</label>
-                                        <textarea asp-for="Body">
+                                        <textarea id="editor" asp-for="Body">
 
                          </textarea>
                                     </div>
                                     <label>Category</label>
-                                    <select asp-for="Category">
+                                    <select class="form-control" asp-for="Category">
                                         <option value="Travel">Travel</option>
                                         <option value="Programing">Programing</option>
                                         <option value="Photography">Photography</option>
@@ -124,14 +82,15 @@
                                                         <img src="~/img/blog/details/blog-author.jpg" alt="">
                                                     </div>
                                                     <div class="blog__details__author__text">
-                                                        <h5>@Model.Author</h5>
+                                                        <label>Author</label>
+                                                        <input class="form-control" asp-for="Author" />
                                                     </div>
                                                 </div>
                                             </div>
 
                                         </div>
                                     </div>
-                                    <input type="submit" value="Submit" />
+                                    <input class="btn btn-danger" type="submit" value="Submit" />
 
                                 </div>
                             </div>
@@ -157,13 +116,16 @@
 
 
 @section scripts {
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="~/lib/Trumbowyg-master/dist/trumbowyg.min.js"></script>
+    
+    <script src="~/js/Blog/trumbowyg.min.js"></script>
+    <script src="~/js/Blog/trumbowyg.cleanpaste.min.js"></script>
+    <script src="~/js/Blog/trumbowyg.pasteimage.min.js"></script>
     <script>
         $('#editor').trumbowyg();
 
-                                            // . - class
-                                            // # - id
-                                            // nav - html element
+                                         
     </script>
 }
+    
