--- a/WebApplicationCrud/Views/Home/blogdetails.cshtml
+++ b/WebApplicationCrud/Views/Home/blogdetails.cshtml
@@ -16,7 +16,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-9 text-center">
                     <div class="blog__hero__text">
-                        <h2>Are you one of the thousands of Iphone owners who has no idea</h2>
+                        <h2>@Model.Title</h2>
                         <ul>
                             <li>By @Model.Author</li>
                             <li>@Model.CreationDate</li>
@@ -64,10 +64,9 @@
                             <h6>_ @Model.QuoteAuthor _</h6>
                         </div>
                         <div class="blog__details__text">
-                            <p>
 
-                                @Model.Body
-                            </p>
+                            @(new HtmlString(Model.Body))
+
 
                         </div>
 
@@ -84,13 +83,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6">
-                                    <div class="blog__details__tags">
-                                        <a href="#">#Fashion</a>
-                                        <a href="#">#Trending</a>
-                                        <a href="#">#2020</a>
-                                    </div>
-                                </div>
+                              
                             </div>
                         </div>
                         <div class="blog__details__btns">
