--- a/WebApplicationCrud/Views/ShoppingCart/CantAddToCart.cshtml
+++ b/WebApplicationCrud/Views/ShoppingCart/CantAddToCart.cshtml
@@ -1,10 +1,16 @@
 ﻿
 
+<body style="min-height: 100vh; display: flex; flex-direction: column;">
 
 
 
-<div class="centered">
 
-    <i class="fa fa-close" style="color:red; font-size:100px;border-radius:50%;border:red solid 1px"></i>
-    <h3 style="color:red">We Are Sorry,There Are Not Enough Items In Stock</h3>
-</div>
+
+    <div class="centered">
+
+        <i class="fa fa-close" style="color:red; font-size:100px;border-radius:50%;border:red solid 1px"></i>
+        <h3 style="color:red">We Are Sorry,There Are Not Enough Items In Stock</h3>
+    </div>
+
+</body>
+
