--- a/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
+++ b/WebApplicationCrud/Views/ShoppingCart/Index.cshtml
@@ -46,8 +46,8 @@
                                 {
                                     <tr>
                                         <td class="product__cart__item">
-                                            <div class="product__cart__item__pic">
-                                                <img src="img/shopping-cart/cart-1.jpg" alt="">
+                                            <div  style="max-width:200px;max-height:200px;"class="product__cart__item__pic">
+                                                <img style="max-width:200px; max-height:200px;" src="~/img/productAndBlogAddedImages/@line.ProductInfo.ProductInfoThumbnailName" alt="">
                                             </div>
                                             <div class="product__cart__item__text">
                                                 <h6>@line.Product.Name</h6>
