--- a/WebApplicationCrud/Views/_ViewImports.cshtml
+++ b/WebApplicationCrud/Views/_ViewImports.cshtml
@@ -9,4 +9,7 @@
 @using WebApplicationCrud.Models.AdministrationModels
 @using Microsoft.AspNetCore.Identity
 @using WebApplicationCrud.Models.Identity
+@using Microsoft.AspNetCore.Html
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
