--- a/WebApplicationCrud/wwwroot/css/style.css
+++ b/WebApplicationCrud/wwwroot/css/style.css
@@ -202,7 +202,8 @@ ol {
 	top: 0;
 	left: 0;
 	z-index: 999999;
-	background: #000;
+	background:white;
+
 }
 
 .loader {
@@ -224,19 +225,19 @@ ol {
 	0% {
 		-webkit-transform: rotate(0deg);
 		transform: rotate(0deg);
-		border: 4px solid #f44336;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
-		border: 4px solid #673ab7;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
-		border: 4px solid #f44336;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 }
@@ -244,17 +245,17 @@ ol {
 @-webkit-keyframes loader {
 	0% {
 		-webkit-transform: rotate(0deg);
-		border: 4px solid #f44336;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 	50% {
 		-webkit-transform: rotate(180deg);
-		border: 4px solid #673ab7;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 	100% {
 		-webkit-transform: rotate(360deg);
-		border: 4px solid #f44336;
+		border: 4px solid #e53637;
 		border-left-color: transparent;
 	}
 }
@@ -1788,7 +1789,11 @@ ol {
 	margin-right: 5px;
 	cursor: pointer;
 }
-
+.product__details__option__quantity input {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
 
 .product__details__option__size label:hover {
 	background: #111111;
@@ -2121,6 +2126,7 @@ ol {
 	padding-top: 70px;
 	position: relative;
 	bottom: 0;
+	margin-top:auto;
 	
 }
 
@@ -3156,11 +3162,13 @@ ol {
 
 .blog__details__pic {
 	margin-bottom: 60px;
+
 }
 
 .blog__details__pic img {
 	min-width: 100%;
 	border-radius: 5px;
+	max-height:600px;
 }
 
 .blog__details__share {
