--- a/WebApplicationCrud/Views/Home/blogdetails.cshtml
+++ b/WebApplicationCrud/Views/Home/blogdetails.cshtml
@@ -128,7 +128,7 @@
                             {
 
                                 <div>
-                                    <a asp-action="Login" asp-controller="Auth"> Sign In </a> to comment on this awesome post!
+                                    <a asp-action="Login" class="btn btn-danger"  asp-controller="Auth"> Sign In </a> to comment on this awesome post!
 
                                 </div>
                             }
@@ -175,7 +175,7 @@
                                         else
                                         {
                                             <div>
-                                                <a asp-action="Login" asp-controller="Auth"> Sign In </a> to comment on this post
+                                                <a asp-action="Login" class="btn btn-danger"  asp-controller="Auth"> Sign In </a> to comment on this post
 
                                             </div>
 
@@ -192,7 +192,7 @@
                                 else
                                 {
                                     <div>
-                                        <a asp-action="Login" asp-controller="Auth"> Sign In </a> to comment on this post
+                                        <a asp-action="Login" class="btn btn-danger" asp-controller="Auth"> Sign In </a> to comment on this post
 
                                     </div>
 
