--- a/WebApplicationCrud/Views/Auth/Login.cshtml
+++ b/WebApplicationCrud/Views/Auth/Login.cshtml
@@ -50,6 +50,9 @@
                             Account Login
                         </span>
 
+
+                        <div asp-validation-summary="All" class="text-danger"></div>
+
                         <span class="txt1 p-b-11">
                             Username
                         </span>
@@ -71,13 +74,13 @@
 
                         <div class="flex-sb-m w-full p-b-48">
                             @*<div class="contact100-form-checkbox">
-            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-            <label class="label-checkbox100" for="ckb1">
-                Remember me
-            </label>
-        </div>*@
+                <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                <label class="label-checkbox100" for="ckb1">
+                    Remember me
+                </label>
+            </div>*@
                             <div>
-                                <a  asp-controller="Auth" asp-action="ForgotPassword">Forgot Password?</a>
+                                <a asp-controller="Auth" asp-action="ForgotPassword">Forgot Password?</a>
                             </div>
 
 
@@ -88,7 +91,7 @@
 
                             <a class="login100-form-btn" asp-action="Register" asp-controller="Auth">Sign up</a>
                         </div>
-                       
+
                     </form>
                     <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
                         <div>
